--- a/html/about.html
+++ b/html/about.html
@@ -12,14 +12,14 @@
   </style>
 </head>
 <body>
-  <header>
-    <h1>About Us</h1>
+ <header>
+    <h1>My Simple Website</h1>
     <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="services.html">Services</a>
-      <a href="gallery.html">Gallery</a>
-      <a href="contact.html">Contact</a>
+      <a href="/">Home</a>
+      <a href="/about">About</a>
+      <a href="/services">Services</a>
+      <a href="/gallery">Gallery</a>
+      <a href="/contact">Contact</a>
     </nav>
   </header>
 
