--- a/html/contact.html
+++ b/html/contact.html
@@ -16,13 +16,13 @@
 </head>
 <body>
   <header>
-    <h1>Contact Us</h1>
+    <h1>My Simple Website</h1>
     <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="services.html">Services</a>
-      <a href="gallery.html">Gallery</a>
-      <a href="contact.html">Contact</a>
+      <a href="/">Home</a>
+      <a href="/about">About</a>
+      <a href="/services">Services</a>
+      <a href="/gallery">Gallery</a>
+      <a href="/contact">Contact</a>
     </nav>
   </header>
 
