--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@
   <title>Home | Simple Website</title>
   <style>
     body { font-family: Arial; margin: 0; background: #f9f9f9; }
-    header, footer { background: #333; color: white; text-align: center; padding: 1em 0; }
+    header, footer { background: #333; color: rgb(243, 124, 124); text-align: center; padding: 1em 0; }
     nav a { color: white; margin: 0 15px; text-decoration: none; }
     main { padding: 2em; text-align: center; }
   </style>
